test/parserTest/pass/test2.ic
class ClassWithFields {
	int x;
	int y;
	int z;
	int a, b, c;
	string firstStr;
	string secondStr;
	string thirdStr, fourthStr;
	boolean cond;
}