test/parserTest/fail/test4.ic
class BadFields {
	int x, string s, boolean b;
}